git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7242 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.import.html
+++ b/App/View/internal/internal.import.html
@@ -128,7 +128,7 @@
 	
 	//下载模板
 	function downModel(){
-		window.location.href="/Static/1.2/出售数据导入模板 .xls";
+		window.location.href="/Static/1.2/saletemplate.xls";
 	}
 	
 	var filepath;
