修正时间显示问题
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7246 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.edit.html
+++ b/App/View/internal/internal.edit.html
@@ -157,7 +157,7 @@
                             <label for="in2">截止于</label>
                             <input type="text" name="salePriceDate" id="salePriceDate" 
                             <?if($sale['salePriceDate']>0){
-                                echo 'value="'.date('Y-m-d h:i:s',$sale['salePriceDate']).'"';
+                                echo 'value="'.date('Y-m-d H:i:s',$sale['salePriceDate']).'"';
                             }?> readonly onclick="laydate({istime: true, format: 'YYYY-MM-DD hh:mm:ss'})" placeholder="请选择截止日期"/>
                         </li>
                     </ul>
