git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7297 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.index.html
+++ b/App/View/internal/internal.index.html
@@ -109,6 +109,7 @@
                     <label for="bq<?=$k?>"><?=$v?></label>
                 </div>
                 <? } ?>
+                <label>其他属性：</label>
                 <div class="mj-checkbox">
                     <input type="checkbox" name="offprice" <?if($s['offprice']==1){echo 'checked';}?> value="1" id="bq8"/>
                     <label for="bq8">特价</label>
