--- a/App/View/index/index.main.html
+++ b/App/View/index/index.main.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>欢迎登录后台管理系统</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script language="JavaScript" src="<?=StaticDir?>js/jquery.min.js"></script>
     <script language="JavaScript" src="<?=StaticDir?>js/jquery.tools.min.js"></script>
