--- a/App/View/index/index.right.html
+++ b/App/View/index/index.right.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>信息管理系统界面</title>
+    <title>欢迎登录后台管理系统</title>
 <link href="<?=StaticDir?>css/style.css" rel="stylesheet" type="text/css" />
 <script language="JavaScript" src="<?=StaticDir?>js/jquery.min.js"></script>
 </head>
