git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7316 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.import.html
+++ b/App/View/internal/internal.import.html
@@ -169,6 +169,7 @@
 					$('#downError').attr('href',filepath);
 				}else{
 					$('.leading').html(data.msg);
+					$('#downError').hide();;
 				}
 				$('#loading').hide();
 				$('#loadok').show();
