git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7325 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.edit.html
+++ b/App/View/internal/internal.edit.html
@@ -284,7 +284,7 @@
     <?foreach ($log as $v) { ?>
         <tr>
             <td><?if($v['roleId']==0){echo "用户";}else{echo $v['roleName'];}?>&nbsp;&nbsp;&nbsp;&nbsp;
-            <?=$v['name']?>&nbsp;&nbsp; 于&nbsp;&nbsp; <?=date("Y-m-d h:i:s",$v['date'])?> 
+            <?=$v['name']?>&nbsp;&nbsp; 于&nbsp;&nbsp; <?=date("Y-m-d H:i:s",$v['date'])?> 
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<?=$v['typeName']?>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;备注(原因)：<?=empty($v['memo'])?'无':$v['memo']?></td>
         </tr>
