git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7368 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.edit.html
+++ b/App/View/internal/internal.edit.html
@@ -10,7 +10,6 @@
         });
 		
 </script>
-
 <div class="wrap">
 <input type="hidden" name="saleId" id="saleId" value="<?=$sale['id']?>">
     <div class="wrap-top">
@@ -29,7 +28,7 @@
             <?}?>
         </div>
         <span class="mj-ztBr">
-            <a class="btn btn-info" href="javascript:history.go(-1);">返回</a>
+            <a class="btn btn-info" href="<?=$referr?>">返回</a>
         </span>
     <div class="mj-detaImg">
         <div class="mj-deiT">
