git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7406 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.index.html
+++ b/App/View/internal/internal.index.html
@@ -254,7 +254,7 @@
 <script type="text/javascript">
 	var total = "<?=$allTotal?>";
     $(function(){
-        $(".mj-screening dt").click(function(){
+        $(".mj-screening .btn").click(function(){
             $(".mj-ddList").toggle();
         });
         $(".mj-sBtn").click(function(){
@@ -281,7 +281,6 @@
         $('#chkAll').click(function(){ 
             $('.chklist').prop("checked",this.checked);
         });
-
     });
 
     //批量下架
