git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7410 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.index.html
+++ b/App/View/internal/internal.index.html
@@ -193,8 +193,8 @@
                             echo $saleType[2];
                         }?></td>
                     <td><?if(count(explode(',', $v['class'])) > 1){?>
-                        <div class="more"><span>多类</span>
-                            <ol>
+                        <div class="more" ><span>多类</span>
+                            <ol style=" max-height: 120px;  overflow-y: auto;width: 80px;">
                                 <? foreach (explode(',', $v['class']) as $cls) {
                                     echo "<li>$cls 类</li>";
                                 }?>
