git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7440 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/index/index.index.html
+++ b/App/View/index/index.index.html
@@ -29,8 +29,8 @@
     <div class="loginbody"> 
     <span class="systemlogo"></span>     
     <div class="loginbox">
-		<form action="http://nav.chofn.net/user/login" method="post" class="tradeFrom" target="fatherFrames">
-		<input type="hidden" name="system" value="trade" style="border:1px red solid;"/>
+		<form action="<?=NAV_LOGIN?>" method="post" class="tradeFrom" target="fatherFrames">
+		<input type="hidden" name="system" value="<?=NAV_LOGIN_SYSTEMID?>" style="border:1px red solid;"/>
 		<ul>
 		<li><input name="username" type="text" class="loginuser" placeholder="帐号"  autocomplete="off"/></li>
 		<li><input name="password" type="password" class="loginpwd" placeholder="密码" autocomplete="off"/></li>
