git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7468 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.edit.html
+++ b/App/View/internal/internal.edit.html
@@ -50,7 +50,7 @@
                 </tr>
                 <tr>
                     <td>区    域：国内</td>
-                    <td>有效期至：2015-15-15</td>
+                    <td>有效期至：<?=$tminfo['valid_end']?></td>
                     <td colspan="2">类别：<?=$sale['class']?>类</td>
                 </tr>
                 <tr>
