新需求修改
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7524 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.edit.html
+++ b/App/View/internal/internal.edit.html
@@ -93,7 +93,7 @@
                 <td><?=$saleSource[$vl['source']]?></td>
                 <td><?=$vl['name']?></td>
                 <td><?=$vl['phone']?></td>
-                <td><?=$vl['price']?></td>
+                <td><?=$vl['price']<=0?'议价':$vl['price']?></td>
                 <td><?=$saleType[$vl['saleType']]?></td>
                 <td><?=$vl['advisor'].'-'.$vl['department']?></td>
                 <td>
