--- a/App/View/module/module.add.html
+++ b/App/View/module/module.add.html
@@ -1,345 +1,234 @@
 <? require(ViewDir.'/header.html');?>
-<script type="text/javascript" src="<?=StaticDir?>js/laydate/laydate.js"></script>
+<link rel="stylesheet" href="<?=StaticDir?>1.2/css/details.css">
 <script charset="utf-8" src="<?=StaticDir?>/editor/kindeditor.js"></script>
 <script charset="utf-8" src="<?=StaticDir?>/editor/lang/zh_CN.js"></script>
-<link rel="stylesheet" href="<?=StaticDir?>css/details.css">
 <script>
         KindEditor.ready(function(K) {
-                window.editor = K.create('#editor_id');
+            window.editor = K.create('#intro', {
+                afterBlur: function () { this.sync(); }
+            });
         });
 		
-		 KindEditor.ready(function(K) {
-                window.editor1 = K.create('#editor_id1');
-        });
 </script>
-
 <div class="wrap">
+<input type="hidden" name="saleId" id="saleId" value="<?=$sale['id']?>">
     <div class="wrap-top">
-        <h4>商品详情</h4><span></span>
+        <h4>首页模块设置 》 添加</h4><span></span>
     </div>
-    <div class="mj-ztBar f-clearfix">
-        <div class="mj-ztBl">
-            <span>商品状态</span>
-            <em class="blue">销售中</em>
-            <a href="javascript:void(0);">下架</a>
-        </div>
-        <a href="javascript:void(0);" class="mj-ztBr">加入黑名单</a>
-    </div>
-    <div class="mj-detaImg">
-        <div class="mj-deiT">
-            <span>商标基本信息</span>
-            <a href="">去商标管家查看详细信息）</a>
-        </div>
-        <div class="mj-deiB f-clearfix">
-            <label><img src="images/mj-img2.jpg" alt=""/></label>
-            <table>
-                <tbody>
-                <tr>
-                    <td>商标名称：哈哈哈...</td>
-                    <td>商标号：22222222</td>
-                    <td>申请人：张xxx</td>
-                    <td>商标状态：注册中</td>
-                </tr>
-                <tr>
-                    <td>区    域：国内</td>
-                    <td>有效期至：2015-15-15</td>
-                    <td colspan="2">类别：25类、25类、25类、25类、25类、25类、25类、25类、25类</td>
-                </tr>
-                <tr>
-                    <td colspan="4">使用商品：群组名、群组名、群组名、群组名、群组名、群组名、群组名、群组名</td>
-                </tr>
-                <tr>
-                    <td colspan="4">群    组：群组名、群组名、群组名、群组名、群组名、群组名、群组名、群组名、群组名、群组名</td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-    <div class="mj-sellT">
-        <table>
-            <thead>
-            <tr>
-                <td colspan="10">出售信息</td>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>序号</td>
-                <td>出售时间</td>
-                <td>来源渠道</td>
-                <td>联系人</td>
-                <td>联系电话</td>
-                <td>底价(元)</td>
-                <td>顾问部门</td>
-                <td>顾问</td>
-                <td>出售价格审核</td>
-                <td>操作</td>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>2015-9-15</td>
-                <td>交易平台</td>
-                <td><label class="mj-laTipa">认</label> 李四</td>
-                <td>13800003333</td>
-                <td>20000</td>
-                <td>市场一部</td>
-                <td>万野</td>
-                <td><em class="blue">已审核</em></td>
-                <td>
-                    <a href="">删除</a>
-                    <a href="">编辑</a>
-                    <a href="">生成报价</a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
+	<p class="text-left" style="margin-top:20px;padding:0 5px 0 5px;background-color:#FFFF99;border:1px solid #dadada;">您可以在此管理首页推荐的商品模块，并为每个模块添加分类和商品。建议每个模块至少有两个分类。</p>
+	<div class="mj-ztBar f-clearfix">
+        <span class="mj-ztBr">
+            <a class="btn btn-info" href="<?=$referr?>">返回</a>
+        </span>
+		<div>
+			<ul>
+				<li>
+					<label>模块标题：</label>
+					<input type="text" name="name" id="modeluname"  placeholder="请输入价格" maxlength="20" />
+					<a ></a>
+				</li>
+			</ul>
+		<div>
+		<hr>
+		<div class="mj-sellT">
+			<p>模块分类管理</p>
+			<table>
+				<tbody>
+				<tr>
+					<td>序号</td>
+					<td>模块分类名称</td>
+					<td>包含商品</td>
+					<td>操作</td>
+				</tr>
+				<?foreach ($sale['contact'] as $ky => $vl) { ?>
+				<tr>
+					<td><?=$vl['id']?></td>
+					<td><?=$vl['name']?></td>
+					<td><?=$vl['saleNum']?></td>
+					<td>
+					<?if ( $vl['isVerify'] == 1) {?>
+						<a href="javascript:void(0);" onclick="delContact(<?=$sale['id']?>, <?=$vl['id']?>, <?=count($sale['contact'])?>);">删除</a>
+						<a href="javascript:void(0);" onclick="setContact(<?=$sale['id']?>, <?=$vl['id']?>);">编辑</a>
+						<!-- <a href="">生成报价</a> -->
+					<?}else{?>
+						<a href="javascript:void(0);" onclick="setVerify(<?=$sale['id']?>, <?=$vl['id']?>);">通过</a>
+						<a href="javascript:void(0);" onclick="delVerify(<?=$sale['id']?>, <?=$vl['id']?>, <?=count($sale['contact'])?>);">驳回</a>
+					<?}?>
+					</td>
+				</tr>
+				<?}?>
+				</tbody>
+			</table>
+		</div>
+		<div class="mj-deiBlist">
+			<div class="mj-deiBtns">
+				<a href="javascript:void(0);" id="mj-deib">新增分类</a>
+			</div>
+		</div>
+    
+		<hr>
+		<div class="mj-sellT">
+			<p>广告图管理</p>
+			<table>
+				<tbody>
+				<tr>
+					<td>序号</td>
+					<td>广告图名称</td>
+					<td>链接</td>
+					<td>操作</td>
+				</tr>
+				<?foreach ($sale['contact'] as $ky => $vl) { ?>
+				<tr>
+					<td><?=$vl['id']?></td>
+					<td><?=$vl['name']?></td>
+					<td><?=$vl['saleNum']?></td>
+					<td>
+					<?if ( $vl['isVerify'] == 1) {?>
+						<a href="javascript:void(0);" onclick="delContact(<?=$sale['id']?>, <?=$vl['id']?>, <?=count($sale['contact'])?>);">删除</a>
+						<a href="javascript:void(0);" onclick="setContact(<?=$sale['id']?>, <?=$vl['id']?>);">编辑</a>
+						<!-- <a href="">生成报价</a> -->
+					<?}else{?>
+						<a href="javascript:void(0);" onclick="setVerify(<?=$sale['id']?>, <?=$vl['id']?>);">通过</a>
+						<a href="javascript:void(0);" onclick="delVerify(<?=$sale['id']?>, <?=$vl['id']?>, <?=count($sale['contact'])?>);">驳回</a>
+					<?}?>
+					</td>
+				</tr>
+				<?}?>
+				</tbody>
+			</table>
+		</div>
+		<div class="mj-deiBlist">
+			<div class="mj-deiBtns">
+				<a href="javascript:void(0);" id="mj-deib">新增广告图</a>
+			</div>
+		</div>
+    
+		<hr>
+		<div class="mj-sellT">
+			<p>推广链接管理</p>
+			<table>
+				<tbody>
+				<tr>
+					<td>序号</td>
+					<td>推广链接名称</td>
+					<td>链接</td>
+					<td>是否着重显示</td>
+					<td>操作</td>
+				</tr>
+				<?foreach ($sale['contact'] as $ky => $vl) { ?>
+				<tr>
+					<td><?=$vl['id']?></td>
+					<td><?=$vl['name']?></td>
+					<td><?=$vl['saleNum']?></td>
+					<td><?=$vl['saleNum']?></td>
+					<td>
+					<?if ( $vl['isVerify'] == 1) {?>
+						<a href="javascript:void(0);" onclick="delContact(<?=$sale['id']?>, <?=$vl['id']?>, <?=count($sale['contact'])?>);">删除</a>
+						<a href="javascript:void(0);" onclick="setContact(<?=$sale['id']?>, <?=$vl['id']?>);">编辑</a>
+						<!-- <a href="">生成报价</a> -->
+					<?}else{?>
+						<a href="javascript:void(0);" onclick="setVerify(<?=$sale['id']?>, <?=$vl['id']?>);">通过</a>
+						<a href="javascript:void(0);" onclick="delVerify(<?=$sale['id']?>, <?=$vl['id']?>, <?=count($sale['contact'])?>);">驳回</a>
+					<?}?>
+					</td>
+				</tr>
+				<?}?>
+				</tbody>
+			</table>
+		</div>
+		<div class="mj-deiBlist">
+			<div class="mj-deiBtns">
+				<a href="javascript:void(0);" id="mj-deib">新增推广链接</a>
+			</div>
+		</div>
+		
+		<table class="mj-tables">
+			<tbody>
+			<tr>
+				<td>操作记录</td>
+			</tr>
+			<?foreach ($log as $v) { ?>
+			<tr>
+				<td><?if($v['roleId']==0){echo "用户";}else{echo $v['roleName'];}?>&nbsp;&nbsp;&nbsp;&nbsp;
+				<?=$v['name']?>&nbsp;&nbsp; 于&nbsp;&nbsp; <?=date("Y-m-d H:i:s",$v['date'])?> 
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<?=$v['typeName']?>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;备注(原因)：<?=empty($v['memo'])?'无':$v['memo']?></td>
+			</tr>
+			<?}?>
+			</tbody>
+		</table>
+	</div>
 
-    <div class="mj-deiBlist">
-        <div class="mj-deiBtns">
-            <a href="javascript:void(0);" id="mj-deib">新增出售信息</a>
-        </div>
-        <table class="mj-table">
-            <thead>
-            <tr>
-                <td>出售信息</td>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>
-                    <input type="checkbox" id="tdi1"/>
-                    <label for="tdi1">可出售</label>
-
-                    <label class="mj-lefts">可出售：</label>
-                    <select>
-                        <option>定价销售</option>
-                        <option>议价销售</option>
-                    </select>
-                </td>
-
-            </tr>
-            <tr>
-                <td>
-                    <input type="checkbox" id="tdi2"/>
-                    <label for="tdi2">可授权</label>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-        <div class="mj-deiBtns">
-            <a href="javascript:void(0);">确定价格信息</a>
-            <a href="javascript:void(0);" class="mj-abgcg">取消</a>
-        </div>
-        <div class="mj-thBar">
-            <div class="mj-thbT">
-                <input type="checkbox" id="thb"/>
-                <label for="thb">商品包装信息</label>
-            </div>
-            <dl>
-                <dd>
-                    <label>商标类型：</label>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="le1"/>
-                        <label for="le1">中文</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="le2"/>
-                        <label for="le2">英文</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="le3"/>
-                        <label for="le3">图形</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="le4"/>
-                        <label for="le4">中+英</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="le5"/>
-                        <label for="le5">中+图</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="le6"/>
-                        <label for="le6">英+图</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="le7"/>
-                        <label for="le7">中+英+图</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="le8"/>
-                        <label for="le8">数字</label>
-                    </div>
-                </dd>
-                <dd>
-                    <label>商标数字：</label>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="va1"/>
-                        <label for="va1">一个字母或中文</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="va2"/>
-                        <label for="va2">两个字母或中文</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="va3"/>
-                        <label for="va3">三个字母或中文</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="va4"/>
-                        <label for="va4">四个字母或中文</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="va5"/>
-                        <label for="va5">五个字母或中文</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="va6"/>
-                        <label for="va6">五个以上字母或中文</label>
-                    </div>
-                </dd>
-                <dd>
-                    <label>商标标签：</label>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="bq1"/>
-                        <label for="bq1">精品</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="bq2"/>
-                        <label for="bq2">特价</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="bq3"/>
-                        <label for="bq3">潜力</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="bq4"/>
-                        <label for="bq4">特色</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="bq5"/>
-                        <label for="bq5">紧急</label>
-                    </div>
-                </dd>
-                <dd>
-                    <label>平台入驻：</label>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="pt0"/>
-                        <label for="pt0">自营</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="pt1"/>
-                        <label for="pt1">天猫</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="pt2"/>
-                        <label for="pt2">京东</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="pt3"/>
-                        <label for="pt3">亚马逊</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="pt4"/>
-                        <label for="pt4">1号店</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="pt5"/>
-                        <label for="pt5">美丽说</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="pt6"/>
-                        <label for="pt6">聚美优品</label>
-                    </div>
-                    <div class="mj-checkbox">
-                        <input type="checkbox" id="pt7"/>
-                        <label for="pt7">大型超市</label>
-                    </div>
-                </dd>
-                <dd><label>价值分析：</label><textarea placeholder="请用一句话表达，限100个汉字内"></textarea></dd>
-                <dd><label>商标介绍：</label><textarea></textarea></dd>
-                <dd>
-                    <label>展示电话：</label>
-                    <select>
-                        <option>13412121451</option>
-                        <option>13412121451</option>
-                        <option>13412121451</option>
-                    </select>
-                </dd>
-            </dl>
-        </div>
-        <div class="mj-becen">
-            <p>备注</p>
-            <div class="mj-sr">
-                <textarea></textarea>
-            </div>
-        </div>
-    </div>
-    <div class="mj-deiBtns">
-        <a href="javascript:void(0);">确定价格信息</a>
-        <a href="javascript:void(0);" class="mj-abgcg">取消</a>
-    </div>
-    <table class="mj-tables">
-        <tbody>
-        <tr>
-            <td>操作记录</td>
-        </tr>
-        <tr>
-            <td>用户 张朝阳 于 2015-12-15 13：25 提交了商品</td>
-        </tr>
-        <tr>
-            <td>用户 张朝阳 于 2015-12-15 13：25 提交了商品</td>
-        </tr>
-        <tr>
-            <td>用户 张朝阳 于 2015-12-15 13：25 提交了商品</td>
-        </tr>
-        </tbody>
-    </table>
-</div>
-<!--出售信息弹层-->
-<div class="mj-infoM">
-    <span class="ms-close mj-close"></span>
-    <ul>
-        <li><label>序号：</label><em>1</em></li>
-        <li><label>出售时间：</label><em>2015-9-15</em></li>
-        <li><label>选择渠道：</label>
-            <select>
-                <option>选择渠道</option>
-                <option>选择渠道</option>
-            </select>
-        </li>
-        <li><label>联系人姓名：</label><input type="text"/></li>
-        <li><label>联系电话：</label><input type="text"/></li>
-        <li><label>底价：</label><input type="text"/></li>
-        <li><label>顾问部门：</label><input type="text"/></li>
-        <li><label>顾问：</label><input type="text"/></li>
-        <li><label>出售价格审核：</label><em>审核</em></li>
-        <li><label>操作：</label>
-            <a href="javascript:void(0);" class="mj-liBtns">确定</a>
-            <a href="javascript:void(0);" class="mj-liBtns mj-abgcg">取消</a>
-        </li>
-    </ul>
-</div>
-
-
+<script type="text/javascript" src="<?=StaticDir?>1.2/js/internal/updown.js"></script>
+<script type="text/javascript" src="<?=StaticDir?>1.2/js/internal/saleEdit.js"></script>
 
 <script type="text/javascript">
     $(function(){
         $("#mj-deib").click(function(){
-            layer.open({
-                type: 1,
-                title: false,
-                closeBtn: false,
-                skin: 'yourclass',
+            var id = $("#saleId").val();
+            setContact(id, 0);
+        });
+        $("#priceType").change(function(){
+            var vl = $(this).children('option:selected').val();
+            if ( vl == 1 ){
+                $(".mj-seCl").show();
+            }else{
+                $(".mj-seCl").hide();
+            }
+        });
 
-                content: $('.mj-infoM')
+        //多选处理
+        $('input[type="checkbox"]').click(function(){
+            var strClass = '';
+            var id = $(this).attr('tname');
+            $('.ck_'+id).each(function(){
+                if($(this).prop('checked')){
+                    strClass += ","+$(this).val();
+                }
+            })
+            strClass = strClass ? strClass.substr(1) : '';
+            $('#'+id).val(strClass);
+        });
+
+        $(".bzform").wrap("<form id='bzformupload' action='/internal/ajaxUploadPic/' method='post' enctype='multipart/form-data'></form>");
+        $("#bzfile").on('change', function(){
+            $("#bzformupload").ajaxSubmit({
+                dataType:  'json',
+                success: function(data) {
+                    if (data.code == 1){
+                        $('.bzpic').val(data.img);
+                        $('.bzpic').attr('src', data.img);
+                        //$('#imageurl').css('visibility', 'visible');
+                    }else{
+                        alert(data.msg);
+                    }
+                },
+                error:function(xhr){
+                    alert('图片格式不正确或图片过大，请重新上传！');
+                }
             });
-            $(".mj-close").bind("click",function(){
-                layer.closeAll();
+        });
+
+        $(".tjform").wrap("<form id='tjformupload' action='/internal/ajaxUploadPic/' method='post' enctype='multipart/form-data'></form>");
+        $("#tjfile").on('change', function(){
+            $("#tjformupload").ajaxSubmit({
+                dataType:  'json',
+                success: function(data) {
+                    if (data.code == 1){
+                        $('.tjpic').val(data.img);
+                        $('.tjpic').attr('src', data.img);
+                        //$('#imageurl').css('visibility', 'visible');
+                    }else{
+                        alert(data.msg);
+                    }
+                },
+                error:function(xhr){
+                    alert('图片格式不正确或图片过大，请重新上传！');
+                }
             });
         });
     });
+    
 </script>
 
 <? require(ViewDir.'/footer.html'); ?>
