--- a/App/View/module/module.index.html
+++ b/App/View/module/module.index.html
@@ -9,18 +9,13 @@
         <li>首页模块设置</li>
         <li>首页模块设置列表</li>
     </ul>
-    <!-- <span style="float:right;margin-right:20px;color:red;">在售商标总数：<?=$total ?></span> -->
 </div>
 <div class="wrap">
     <div class="wrap-content">
-	
-	
-		<p class="text-left" style="float:left;padding-top:20px;">您可以在此管理首页推荐的商品模块，并为每个模块添加分类和商品。建议每个模块至少有两个分类。</p>
-        <p class="text-left" style="float:left;padding-top:20px;">共有 <b class="red"><?=$total?></b> 条数据</p>
-        <div class="wrap-tittle">
-            <button class="btn btn-danger" onclick="add();"    type="button">创建一个模块</button>
-            <button class="btn btn-info" type="button" onclick="reloadList();">刷新</button>
-        </div>
+		<p class="text-left" style="float:left;margin-top:20px;padding:0 5px 0 5px;background-color:#FFFF99;border:1px solid #dadada;">您可以在此管理首页推荐的商品模块，并为每个模块添加分类和商品。建议每个模块至少有两个分类。共有 <b class="red"><?=$total?></b> 条数据</p>
+        <br>
+		<br>
+		<br>
         <div class="wrap-table">
             <table class="table table-hover" style="border: 1px solid #dadada;margin-bottom: 0">
                 <thead>
@@ -33,82 +28,28 @@
                     </tr>
                 </thead>
                 <tbody class="table-list">
-                <? foreach ($saleList as $k => $v) {  ?>
+                <? foreach ($list as $k => $v) {  ?>
                 <tr>
-                    <td><?=$v['number']?></td>
-                    <td><span <?if ($v['status']==1){
-                            echo 'class="blue"';
-                        }elseif ($v['status']==2){
-                            echo 'class="red"';
-                        }else{
-                            echo 'class="yellow"';
-                        }
-                        ?> ><?=$saleStatus[$v['status']]?></span></td>
-                    <td><?if($v['date']==0){echo '-';}else{echo date("Y-m-d", $v['date']);}?>
-                    <?if( !empty($v['tminfo']['embellish'])){?><span class="blue">包</span><?}?></td>
-                    <td title="<?=$v['name']?>"><?if(mb_strlen($v['name'],'utf8') > 15)
-                    {echo mb_substr($v['name'],0,12,'utf8')."...";}
-                    else{echo $v['name'];}?></td>
-                    <td><? if ($v['isSale'] == 1 && $v['isLicense'] == 1) {
-                            echo $saleType[3];
-                        }elseif($v['isSale'] == 1){
-                            echo $saleType[1];
-                        }elseif($v['isLicense'] == 1){
-                            echo $saleType[2];
-                        }?></td>
-                    <td><?if(count(explode(',', $v['class'])) > 1){?>
-                        <div class="more" ><span>多类</span>
-                            <ol style=" max-height: 150px;  overflow-y: auto;width: 80px;">
-                                <? foreach (explode(',', $v['class']) as $cls) {
-                                    echo "<li>$cls 类</li>";
-                                }?>
-                            </ul>
-                        </div>
-                    <?}else{echo $v['class']."类";}?></td>
-                    <td class="showMore"><?if(count($v['contact']) > 1){echo "多顾问";}else
-                    {$ct=current($v['contact']);echo $ct['advisor'].'-'.$ct['department'];} ?>
-                    </td>
-                    <td class="showMore"><?if(count($v['contact']) > 1){echo '多渠道';}
-                    else{$ct=current($v['contact']);echo $saleSource[$ct['source']];} ?>
-                    </td>
-                    <td class="showMore"> <?if(count($v['contact']) > 1){?>
-                        <div class="more"><span>多联系方式</span>
-                            <ul>
-                            <?foreach ($v['contact'] as $key => $value) { ?>
-                                <li><table width="99%"><tr align="center">
-                                <td width="30%"><?=$value['advisor'].'-'.$value['department']?></td>
-                                <td width="15%"><?=$saleSource[$value['source']]?></td>
-                                <td width="40%">
-                                <?if($value['isVerify'] == 2){?><span class="red">审</span><?}?>
-                                <?php echo mbSub( $value['name'] , 0, 3);?>-<?=$value['phone']?></td>
-                                <td width="15%"><?=$value['price']?></td>
-                                </tr></table>
-                            <?}?>
-                            </ul>
-                        </div>
-                    <? }else{$ct=current($v['contact']);if($ct['isVerify'] == 2){echo '<span class="red">审</span>';}echo  mbSub( $ct['name'] , 0, 3)."-".$ct['phone'];} ?>
-                    </td>
-                    <td class="showMore"><?if(count($v['contact']) > 1){echo '多底价';}
-                    else{$ct=current($v['contact']);echo $ct['price'];} ?>
-                    </td>
-                    <td class="showMore"><?if($v['priceType']==2){echo "议价";}else{echo $v['price'];}?></td>
+                    <td><?=$v['name']?></td>
+					<td><?=$v['classNum']?></td>
+					<td><?=$v['adsNum']?></td>
+					<td><?=$v['linkNum']?></td>
                     <td>
-                        <span class="icon icon-delete">
-                        <?if($v['status']==1){?>
-                        <a href="javascript:;" class="btn-warning" onclick="doDown(<?=$v['id']?>);">下架</a>
-                        <?}elseif($v['status']==2 && count($v['contact']) > 0){?>
-                        <a href="javascript:;" class="btn-success" onclick="doUp(<?=$v['id']?>);">上架</a>
-                        <?}?></span>
-                        <span class="icon icon-editor">
-                        <a href="/internal/edit/?id=<?=$v['id']?>" class="btn-info">编辑</a>
-                        </span>
+						<a href="/internal/edit/?id=<?=$v['id']?>" class="btn-info">编辑</a>
+						<a href="/internal/edit/?id=<?=$v['id']?>" class="btn-info">删除</a> | 
+						<a href="/internal/edit/?id=<?=$v['id']?>" class="btn-info">向下</a>
+						<a href="/internal/edit/?id=<?=$v['id']?>" class="btn-info">向上</a>
                     </td>
                 </tr>
                 <? } ?>
                 </tbody>
             </table>
-        </div>    
-<div id="page" align="center"><?=$pageBar?></div>  
+        </div>   
+		<br>
+		<div class="btn-group">
+            <button class="btn btn-danger" onclick="add();"    type="button">+ 创建一个模块</button>
+        </div>
+		
     </div>
 </div>
 
@@ -248,14 +189,7 @@
 
     function add()
     {
-        layer.open({
-            type: 2,
-            title: false,
-            closeBtn: false,
-            area: ['560px', '350px'],
-
-            content: '/internal/create/'
-        });
+        window.location.href="/module/add/";
     }
 	
 	//批量导入商标
