git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7724 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/module/module.index.html
+++ b/App/View/module/module.index.html
@@ -35,7 +35,7 @@
 					<td><?=$v['adsNum']?></td>
 					<td><?=$v['linkNum']?></td>
                     <td>
-						<a href="/internal/edit/?id=<?=$v['id']?>" class="btn-info">编辑</a>
+						<a href="/module/edit/?id=<?=$v['id']?>" class="btn-info">编辑</a>
 						<a href="/internal/edit/?id=<?=$v['id']?>" class="btn-info">删除</a> | 
 						<a href="/internal/edit/?id=<?=$v['id']?>" class="btn-info">向下</a>
 						<a href="/internal/edit/?id=<?=$v['id']?>" class="btn-info">向上</a>
