--- a/Static/1.2/css/import.css
+++ b/Static/1.2/css/import.css
@@ -80,9 +80,14 @@ a{color:inherit;font-size:inherit;}
 }
 .confit-list label span{
 	display:inline-block;
-	width: 60px;
+	width: 80px;
 	color:#666666;
 }
+
+.confit-list p{
+	margin-top:10px;
+}
+
 .confit-list{
 	margin-bottom: 10px;
 }
